# ttp

./: .gitignore  LICENSE  README.md  build.py  pyproject.toml
docs/: manual.md
prompt_history/: 20260220_claude.txt
resources/: connect.ttl
src/ttp/: __init__.py  __main__.py  app.py  crypto.py  dialogs.py  models.py  storage.py  teraterm.py
